# obp-empirical-toolkit

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
classifiers/: README.md  __init__.py  ap_outcome_classifier.py
datasets/: 1328f_by_district.csv  1328f_by_year.csv  1328f_lookback_caught.csv  README.md  subv_quarterly.csv
examples/: README.md  classify_aps_demo.py  reproduce_subv_curve.py
methodology/: README.md  ap-outcome-classification.md  dismissal-rate-calculation.md  subv-quarterly-volume.md
scrapers/: README.md  courtlistener_search_pull.py  pacer_docket_pull.py
