[project]
name = "obp-empirical-toolkit"
version = "0.1.0"
description = "Empirical research tools for U.S. bankruptcy data analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Open Bankruptcy Project", email = "research@openbankruptcyproject.org" }
]
keywords = ["bankruptcy", "PACER", "CourtListener", "empirical research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://openbankruptcyproject.org"
Repository = "https://github.com/openbankruptcyproject/obp-empirical-toolkit"
